--- a/templates/components/main/sidebar.html.twig
+++ b/templates/components/main/sidebar.html.twig
@@ -136,12 +136,12 @@
                                 </label>
                             </div>
                         </div>
-                        <div class="menu-item px-4 py-1.5">
-                            <a class="btn btn-sm btn-light justify-center"
-                               href="#">
-                                Me déconnecer
-                            </a>
-                        </div>
+                          <div class="menu-item px-4 py-1.5">
+                          <a class="btn btn-sm btn-light justify-center"
+                           href="{{ path('app_logout') }}">
+                            Déconnexion
+                           </a>
+                       </div>
                     </div>
                 </div>
             </div>
